--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.0.0",
     "Kriti-2025": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
