--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@tanstack/react-query": "^5.64.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +14,9 @@
     "Kriti-2025": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.3",
+    "react-query": "^3.39.3",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "tailwind": "^4.0.0",
