--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "codemirror": "^5.65.18",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.0",
     "Kriti-2025": "file:",
     "react": "^18.2.0",
+    "react-codemirror2": "^8.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.3",
     "react-query": "^3.39.3",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.0",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
