--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-codemirror2": "^8.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-markdown": "^9.0.3",
     "react-query": "^3.39.3",
     "react-resizable": "^3.0.5",
