--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.14",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
