--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.19.10",
     "@google/generative-ai": "^0.21.0",
     "@tanstack/react-query": "^5.64.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -34,7 +35,16 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": [
+        "off",
+        {
+          "args": "none",
+          "ignoreRestSiblings": true
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
