--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.11",
     "mongoose": "^8.9.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "sharp": "^0.33.5",
     "uuid": "^11.0.5"
   }
