--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.0",
+    "js-cookie": "^3.0.5",
     "Kriti-2025": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
