--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "Kriti-2025": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
