--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "sharp": "^0.33.5",
     "uuid": "^11.0.5"
