fix: adjust alignment in FirstChatSection and comment out image attachment for clarity

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.0",
